[tool.poetry]
name = "voxshadepy"
version = "0.1.0"
description = ""
authors = ["tomast1337 <vycasnicolas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dearpygui = "^2.0.0"
lark = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
