[tool.poetry]
name = "voxshadepy"
version = "0.1.0"
description = ""
authors = ["tomast1337 <vycasnicolas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dearpygui = "^2.0.0"
lark = "^1.2.2"
numpy = "^2.2.6"
noise = "^1.2.2"
vpython = "^7.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
